--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Warren-Partridge/bc-analytica#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "ip": "^1.1.5",
+    "iplocation": "^5.0.0"
   }
 }
