Add useragent and sysinfo

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "ip": "^1.1.5",
-    "iplocation": "^5.0.0"
+    "iplocation": "^5.0.0",
+    "systeminformation": "^3.38.0",
+    "useragent": "^2.3.0"
   }
 }
