--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
     "ip": "^1.1.5",
     "iplocation": "^5.0.0",
+    "npm": "^5.8.0",
     "path": "^0.12.7",
     "systeminformation": "^3.38.0",
     "useragent": "^2.3.0"
