--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "ip": "^1.1.5",
+    "ip-location": "^1.0.1",
     "iplocation": "^5.0.0",
     "ipware": "^1.0.0",
     "passport": "^0.4.0",
